[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-cotton"
version = "1.0.8"
description = "Bringing component based design to Django templates."
authors = [ "Will Abbott <willabb83@gmail.com>",]
license = "MIT"
readme = "README.md"
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.10", "Framework :: Django",]
keywords = [ "django", "cotton", "reusable", "app",]
exclude = [ "dev", "docs", "django_cotton/tests", "django_cotton/templates",]

[tool.black]
line-length = 100
exclude = "/(\n    \\.git\n  | \\.mypy_cache\n  | \\\\.tox\n  | \\\\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  | venv\n)/\n"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.8,<4"
beautifulsoup4 = "~4.12.2"
django = ">=4.2,<5.2"
