[project]
name = "cotton-dev-app"
requires-python = ">=3.8, <4"
dependencies = [
    "django~=4.2.6",
    "beautifulsoup4~=4.12.2",
    "selenium~=4.13.0",
    "chromedriver-py~=117.0.5938.92",
    "webdriver-manager~=4.0.1"
]

[tool.poetry]
name = "cotton-dev-app"
version = "0.1"
description = "Development and test app for the django package."
authors = ["Will Abbott <wabbott@dyvenia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
beautifulsoup4 = "~4.12.2"
selenium = "~4.13.0"
chromedriver-py = "~117.0.5938.92"
webdriver-manager = "~4.0.1"