[project]
name = "cotton-dev-app"
requires-python = ">=3.8, <4"

[tool.poetry]
name = "cotton-dev-app"
version = "0.1"
description = "Development and test app for the django package."
authors = ["Will Abbott <willabb83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
beautifulsoup4 = "~4.12.2"