[project]
name = "cotton-dev-app"
version = "0.9"
requires-python = ">=3.8, <4"
dependencies = [
    "django~=4.2.6",
    "beautifulsoup4~=4.12.2",
    "selenium~=4.13.0",
    "heroicons~=2.6.0",
    "gunicorn~=20.1.0",
    "asgiref>=3.6.0,<4",
    "whitenoise~=6.2.0",
]
authors = [
  { name = "Will Abbott", email = "willabb83@gmail.com" }
]

[tool.poetry]
name = "cotton-docs-app"
version = "0.1"
description = "Docs site for django_cotton."
authors = ["Will Abbott <willabb83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
beautifulsoup4 = "~4.12.2"
heroicons = "2.6.0"
gunicorn = "20.1.0"
asgiref = ">=3.6.0,<4"
whitenoise = "6.2.0"