[project]
name = "cotton-dev-app"
version = "0.9"
requires-python = ">=3.10, <4"
dependencies = [
    "django~=5.1",
    "beautifulsoup4~=4.12.2",
    "heroicons~=2.6.0",
    "gunicorn~=20.1.0",
    "asgiref>=3.6.0,<4",
    "whitenoise~=6.2.0",
    "redis~=5.0.1",
]
authors = [
  { name = "Will Abbott", email = "willabb83@gmail.com" }
]

[tool.poetry]
name = "cotton-docs-app"
version = "0.1"
description = "Docs site for django_cotton."
authors = ["Will Abbott <willabb83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
beautifulsoup4 = "~4.12.2"
heroicons = "2.6.0"
gunicorn = "20.1.0"
asgiref = ">=3.6.0,<4"
whitenoise = "6.2.0"